<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal">

    <TextClock
        android:id="@+id/textClock"
        android:layout_width="305dp"
        android:layout_height="114dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="365dp"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextDate" />

    <TextView
        android:id="@+id/editTextDate"
        android:layout_width="348dp"
        android:layout_height="95dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="317dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textClock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:onClick="onTimerClick"
        android:text="@string/start_timer_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textClock" />

    <Button
        android:id="@+id/button3"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="146dp"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="103dp"
        android:onClick="onStopWatchClick"
        android:text="@string/start_stopwatch_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="146dp"
        android:layout_marginEnd="145dp"
        android:onClick="onAlarmClick"
        android:text="@string/start_alarm_button"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />


</androidx.constraintlayout.widget.ConstraintLayout>